--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
-    "css-loader": "0.26.0",
+    "css-loader": "^0.26.1",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
     "eslint": "3.8.1",
@@ -27,7 +27,7 @@
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.4.1",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
+    "file-loader": "^0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
@@ -42,8 +42,8 @@
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
@@ -51,12 +51,14 @@
   },
   "dependencies": {
     "bootstrap": "3",
+    "font-awesome": "^4.7.0",
     "getstorybook": "^1.6.1",
     "global": "^4.3.1",
     "node-sass": "^4.1.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
+    "react-fontawesome": "^1.5.0",
     "sass-loader": "^4.1.0"
   },
   "scripts": {
