--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-core": "6.17.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
+    "babel-loader": "^6.2.10",
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -26,7 +26,7 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.4.1",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "bootstrap": "3",
+    "flexbox-react": "^4.1.0",
     "font-awesome": "^4.7.0",
     "getstorybook": "^1.6.1",
     "global": "^4.3.1",
@@ -58,7 +59,7 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-fontawesome": "^1.5.0",
+    "react-fa": "^4.1.2",
     "sass-loader": "^4.1.0"
   },
   "scripts": {
