--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "redux": "^3.6.0",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -60,6 +61,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-fa": "^4.1.2",
+    "react-redux": "^5.0.1",
     "sass-loader": "^4.1.0"
   },
   "scripts": {
