--- a/package.json
+++ b/package.json
@@ -3,7 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "airbnb",
+
+    "rules": {
+      "newline-per-chained-call": 1,
+      "react/jsx-no-bind": [ "error" ],
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+
+      "linebreak-style": 0,
+      "no-plusplus": 0,
+      "no-mixed-operators": 0,
+      "strict": 0,
+      "import/no-extraneous-dependencies": 0
+    }
   },
   "devDependencies": {
     "autoprefixer": "6.5.1",
@@ -19,13 +31,14 @@
     "css-loader": "^0.26.1",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
-    "eslint": "3.8.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-config-react-app": "^0.5.0",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "filesize": "3.3.0",
