--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.1",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
