--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
           ]
         }
       ],
+      "no-unused-vars": 1,
       "linebreak-style": 0,
       "no-plusplus": 0,
       "no-mixed-operators": 0,
@@ -87,6 +88,7 @@
     "react-fa": "^4.1.2",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.1",
+    "redux-immutable": "^3.0.9",
     "sass-loader": "^4.1.0"
   },
   "scripts": {
