--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
+    "casual": "^1.5.8",
+    "casual-browserify": "^1.5.8",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
