--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "autoprefixer": "6.5.1",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "6.17.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
@@ -61,6 +62,7 @@
     "jest": "17.0.2",
     "json-loader": "0.5.4",
     "mocha": "^3.2.0",
+    "node-sass": "^4.1.1",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
@@ -69,11 +71,13 @@
     "recursive-readdir": "2.1.0",
     "redux": "^3.6.0",
     "redux-mock-store": "^1.2.1",
+    "sass-loader": "^4.1.1",
     "semantic-ui": "^2.2.7",
     "strip-ansi": "3.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "1.14.0",
+    "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0"
@@ -88,6 +92,7 @@
     "react-dom": "^15.4.1",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.1",
+    "react-toolbox": "^1.3.3",
     "redux-immutable": "^3.0.9",
     "semantic-ui-react": "^0.63.2"
   },
