--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "casual": "^1.5.8",
     "casual-browserify": "^1.5.8",
     "chalk": "1.1.3",
+    "concurrently": "^3.1.0",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "^0.26.1",
@@ -51,6 +52,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "filesize": "3.3.0",
@@ -94,13 +96,15 @@
     "semantic-ui-react": "^0.63.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "node scripts/start-client.js",
+    "server": "node src/server/index.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "src/**/__tests__/*.{js,jsx}"
     ],
     "setupFiles": [
       "<rootDir>\\config\\polyfills.js"
