--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       ],
       "no-unused-vars": "warn",
       "spaced-comment": "warn",
+      "comma-dangle": "warn",
       "linebreak-style": 0,
       "no-plusplus": 0,
       "no-mixed-operators": 0,
@@ -104,7 +105,7 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "client/src/**/__tests__/*.{js,jsx}"
+      "client/src/**/*.test.{js,jsx}"
     ],
     "setupFiles": [
       "<rootDir>\\client\\config\\polyfills.js"
