--- a/package.json
+++ b/package.json
@@ -86,12 +86,14 @@
     "font-awesome": "^4.7.0",
     "getstorybook": "^1.6.1",
     "global": "^4.3.1",
+    "http": "0.0.0",
     "immutable": "^3.8.1",
     "node-sass": "^4.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
     "redux-immutable": "^3.0.9",
     "sass-loader": "^4.1.0",
     "semantic-ui-react": "^0.63.2"
